<resources>
    <string name="app_name">Ping</string>

    <string name="email">Почта</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="nickname">Никнейм</string>
    
    <string name="notifications">Уведомления</string>
    
    <string name="login">Войти</string>
    <string name="register"><u>Зарегистрироваться</u></string>
    <string name="forget_password"><u>Забыл пароль</u></string>
    <string name="captcha"><u>Я человек</u></string>
    <string name="send_code"><u>Отправить код</u></string>
    <string name="time_is_over"><u>Время вышло</u></string>
    <string name="description">Описание:</string>
    <string name="about_me">о себе</string>

    <string name="account">Аккаунт</string>
    <string name="avatar">Аватар</string>
    <string name="choose_avatar">Выбери свой аватар</string>
    <string name="choose_in_gallery">Выбрать из галерей</string>
    <string name="save">Сохранить</string>

    <string name="message">Сообщения</string>
    <string name="create_group">Создать группу</string>
    <string name="settings">Настройки</string>
    <string name="next">Далее</string>
    <string name="check">проверить</string>
    <string name="exit"><u>Выйти из аккаунта</u></string>
    <string name="change_password">сменить пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="check_connect_server">Проверить соедение</string>
    <string name="about_server">Информация о сервере:</string>
    <string name="apply">Применить</string>

    <string name="search">поиск...\n</string>
    <string name="descriptionSetAvatar">Данный автар будет отображаться в вашем профеле\n</string>
    <string name="chat">чат</string>
    <string name="profile">Профиль</string>
</resources>