<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:tag="message_tag"
            android:id="@+id/nav_message_menu"
            android:icon="@drawable/ping_notification"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_create_group"
            android:icon="@drawable/insipid_group"
            android:title="@string/create_group" />
    </group>
    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single"/>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/insipid_avatar"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/exit"
                android:onClick="exit_account"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>