<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_message_menu">

    <fragment
        android:id="@+id/nav_message_menu"
        android:name="com.bot.ping.ui.message.MessageMenuFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_message_menu" />
    <fragment
        android:id="@+id/nav_create_group"
        android:name="com.bot.ping.ui.create_group.CreateGroupFragment"
        android:label="@string/create_group"
        tools:layout="@layout/fragment_create_group" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.bot.ping.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>