<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/backGroundInput"
        app:cardBackgroundColor="@color/backGroundInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/avatar1"
            android:translationX="12dp"
            android:translationY="12dp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationX="100dp"
            android:translationY="12dp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"
            android:translationX="100dp"
            android:translationY="36dp" />

        <TextView
            android:id="@+id/textViewNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="italic"
            android:translationX="100dp"
            android:translationY="58dp" />
    </androidx.cardview.widget.CardView>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:text="@string/notifications"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"></Switch>
</androidx.constraintlayout.widget.ConstraintLayout>