<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backGround">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewEmblem"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ping"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="40sp"

        android:layout_marginTop="120dp"
        android:layout_marginEnd="40sp"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:padding="10dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEmblem" />

    <Button
        android:id="@+id/buttonSendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text"
        android:text="@string/send_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

<!--    <CheckBox-->
<!--        android:id="@+id/captchaCheckBox"-->
<!--        android:layout_width="115dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:scaleX="1.2"-->
<!--        android:scaleY="1.2"-->
<!--        android:text="@string/captcha"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.504"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/buttonSendCode" />-->

    <Button
        android:id="@+id/buttonSetLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSendCode" />

    <Button
        android:id="@+id/buttonSetRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetLoginActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>