<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround">


    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="Проверьте свою почту и введите код из письма"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEmblem" />


    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="5:00"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewEmblem"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ping"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader" />

    <EditText
        android:id="@+id/editTextPassword"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="40sp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="40sp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:padding="10dp"
        android:password="true"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntryCode" />

    <EditText
        android:id="@+id/editTextEntryCode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="center"
        android:hint="-----"
        android:inputType="numberPassword"
        android:maxLength="5"
        android:password="false"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerTextView"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextCheckPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="40sp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40sp"

        android:background="@drawable/edit_text"
        android:hint="@string/repeat_password"
        android:padding="10dp"
        android:password="true"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonCheckCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCheckPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>